[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sgm"
dynamic = ["version"]
description = "Stability Generative Models"
readme = "README.md"
license-files = { paths = ["LICENSE-CODE"] }
requires-python = ">=3.8"
dependencies = [
    "black==23.7.0",
    "chardet==5.1.0",
    "clip",
    "einops>=0.6.1",
    "fairscale>=0.4.13",
    "fire>=0.5.0",
    "fsspec>=2023.6.0",
    "gradio>=3.36.1",
    "hatch>=1.14.0",
    "invisible-watermark>=0.2.0",
    "kornia==0.6.9",
    "matplotlib>=3.7.2",
    "natsort>=8.4.0",
    "ninja>=1.11.1",
    "numpy>=1.24.4",
    "omegaconf>=2.3.0",
    "open-clip-torch>=2.20.0",
    "opencv-python==4.6.0.66",
    "pandas>=2.0.3",
    "pillow>=9.5.0",
    "pudb>=2022.1.3",
    "pytorch-lightning==2.0.1",
    "pyyaml>=6.0.1",
    "rembg>=2.0.61",
    "scipy>=1.10.1",
    "sdata",
    "streamlit>=0.73.1",
    "streamlit-keyup==0.2.0",
    "tensorboardx==2.6",
    "timm>=0.9.2",
    "tokenizers==0.12.1",
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
    "torchdata==0.6.1",
    "torchmetrics>=1.0.1",
    "torchvision>=0.15.2",
    "tqdm>=4.65.0",
    "transformers==4.19.1",
    "triton==2.0.0",
    "urllib3>=1.25.4,<1.27",
    "wandb>=0.15.6",
    "webdataset>=0.2.33",
    "wheel>=0.41.0",
    "xformers>=0.0.20",
]

[project.urls]
Homepage = "https://github.com/Stability-AI/generative-models"

[tool.hatch.version]
path = "sgm/__init__.py"

[tool.hatch.build]
# This needs to be explicitly set so the configuration files
# grafted into the `sgm` directory get included in the wheel's
# RECORD file.
include = [
    "sgm",
]
# The force-include configurations below make Hatch copy
# the configs/ directory (containing the various YAML files required
# to generatively model) into the source distribution and the wheel.

[tool.hatch.build.targets.sdist.force-include]
"./configs" = "sgm/configs"

[tool.hatch.build.targets.wheel.force-include]
"./configs" = "sgm/configs"

[tool.hatch.envs.ci]
skip-install = false

dependencies = [
    "pytest"
]

[tool.hatch.envs.ci.scripts]
test-inference = [
    "pip install torch==2.0.1+cu118 torchvision==0.15.2+cu118 torchaudio==2.0.2+cu118 --index-url https://download.pytorch.org/whl/cu118",
    "pip install -r requirements/pt2.txt",    
    "pytest -v tests/inference/test_inference.py {args}",
]

[tool.uv.sources]
sdata = { path = "stable-datasets" }
clip = { git = "https://github.com/openai/CLIP.git" }
